syntax = "proto3";

option go_package = "github.com/XWS-Dislinkt-Team-41/dislinkt-backend/microservices/common/post";

package post;

import "google/api/annotations.proto";

service PostService{
        rpc Get(GetRequest) returns(GetResponse) {
        	option (google.api.http) = {
			get: "/post/{id}"
		};
        }
        rpc GetAll(GetAllRequest) returns(GetAllResponse) {
        	option (google.api.http) = {
			get: "/post"
		};
        }
          rpc Insert(NewPostRequest) returns(NewPostResponse) {
                option (google.api.http) = {
                        post: "/user/{id}/post",
                        body: "post"
                };
        }
}

message GetRequest {
        string id = 1;
}

message GetResponse {
        Post post = 1;
}

message GetAllRequest {
}

message GetAllResponse {
        repeated Post posts = 1;
}

message Post {
        string id = 1;
        string text = 2;
        string link = 3;
        string image = 4;
        string owner_id  = 5;
        int64 likes = 6;
        int64 dislikes = 7;
        repeated Comment comments = 8;
}


message NewPostRequest {
        string id = 1;
        Post post = 2;
}

message NewPostResponse {
        Post post = 1;
}




message Comment {
string code = 1;
string text = 2;
}
